# qry-proyect-examples

./: .gitignore  main.py  mkdocs.yml  pyproject.toml
data/: clientes.csv  productos.csv  ventas.csv
docker/: README.md  docker-compose.yml  init.sql
docs/: changelog.md  index.md
docs/api/: qrydoc.md  report-template.md  types.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: advanced-examples.md  ai-builder.md  chart-config.md  cover-builder.md  cover-pages.md  custom-fonts.md  databases.md  footer-logos.md  multiple-charts.md  report-presets.md  sections.md  template-builder.md
docs/stylesheets/: extra.css
examples/: 02_consultas_basicas.py  09_explorar_base_datos.py
examples/data/: clientes.csv  productos.csv  ventas.csv
examples/v0.1.3/: 01_portada_basica.py  02_footer_logo.py  03_fuentes_custom.py  04_secciones.py  05_reporte_completo.py  06_mysql_aerolineas.py  07_reporte_aerolineas_completo.py  08_maritimo_completo.py  README.md
examples/v0.1.5/: 01_cover_builder.py  02_template_builder.py  03_report_presets.py  04_chart_config.py  05_ai_builder.py  06_ejemplo_completo.py  README.md
output/: ranking_vendedores.csv  resumen_ventas.csv  todos_los_datos.csv  ventas_accesorios.csv  ventas_centro.csv  ventas_por_categoria.csv  ventas_sur_resumen.csv
output/aerolineas/: resumen_aerolineas.csv  vuelos_cancelados.csv
output/maritimo/: resumen_barcos.csv  resumen_puertos.csv  viajes_largos.csv
output/postgres/: filtrado_laptop_hp.csv  filtrado_mouse_logitech.csv  filtrado_teclado_mecánico.csv  todos_los_datos.csv
(+12 files in other folders)
